@@ -286,6 +286,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * Fix XML validity checks in parser tests on PHP 5.1
 * (bug 3844) ab: av: ba: ce: & kv: now inherit from LanguageRu.php
              ii: & za: now inherit from LanguageZn_cn.php
+* Optional summary parameter to action=rollback, for user javascript
 
 
 === Caveats ===
